--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,9 @@
     "module": "commonjs" /* Specify what module code is generated. */,
     "baseUrl": ".",
     "paths": {
-      "@server/*": ["./server/*"],
-      "@api/*": ["./server/api/*"]
+      "@server/*": ["./server/src/*"],
     },
-
+    
     /* JavaScript Support */
     // "allowJs": true,                                  /* Allow JavaScript files to be a part of your program. Use the 'checkJS' option to get errors from these files. */
     // "checkJs": true,                                  /* Enable error reporting in type-checked JavaScript files. */
@@ -75,5 +74,6 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
-  }
+  },
+  
 }
