--- a/package.json
+++ b/package.json
@@ -2,19 +2,28 @@
   "name": "xr-archaeology-server",
   "version": "0.1.0",
   "private": true,
+  "type": "commonjs",
   "scripts": {
     "dev": "npm run watch:css && next dev",
     "build": "npm run watch:css && next build",
     "start": "next start",
     "lint": "next lint",
     "watch:css": "postcss styles/tailwind.css -o styles/main.css",
+    "devMongo": "mkdir -p data && mongod --dbpath data --replSet rs0",
     "docker:start": "docker-compose up",
     "docker:build": "docker-compose up --build",
-    "docker:force": "docker-compose up --build --force-recreate --renew-anon-volumes"
+    "docker:force": "docker-compose up --build --force-recreate --renew-anon-volumes",
+    "server:start": "ts-node server/index.ts"
   },
   "dependencies": {
+    "@feathersjs/feathers": "^5.0.14",
+    "bson": "^6.2.0",
+    "cross-env": "^7.0.3",
+    "mongodb": "^6.3.0",
+    "moongose": "^1.0.0",
     "next": "14.0.4",
     "react": "^18",
+    "react-data-grid": "^7.0.0-beta.41",
     "react-dom": "^18",
     "react-icons": "^4.12.0"
   },
@@ -29,6 +38,7 @@
     "postcss-cli": "^11.0.0",
     "postcss-import": "^16.0.0",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
