--- a/package.json
+++ b/package.json
@@ -16,21 +16,30 @@
     "server:start": "ts-node server/index.ts"
   },
   "dependencies": {
+    "@feathersjs/express": "^5.0.14",
     "@feathersjs/feathers": "^5.0.14",
+    "@feathersjs/socketio": "^5.0.14",
+    "@feathersjs/socketio-client": "^5.0.14",
+    "body-parser": "^1.20.2",
     "bson": "^6.2.0",
     "cross-env": "^7.0.3",
+    "express": "^4.18.2",
+    "feathers-mongoose": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongodb": "^6.3.0",
     "moongose": "^1.0.0",
     "next": "14.0.4",
     "react": "^18",
     "react-data-grid": "^7.0.0-beta.41",
     "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "socket.io": "^4.7.3"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/webpack-env": "^1.18.4",
     "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
@@ -39,6 +48,7 @@
     "postcss-import": "^16.0.0",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack": "^5.89.0"
   }
 }
