--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "docker:start": "docker-compose up",
     "docker:build": "docker-compose up --build",
     "docker:force": "docker-compose up --build --force-recreate --renew-anon-volumes",
-    "server:start": "ts-node server/index.ts"
+    "server:start": "ts-node -r tsconfig-paths/register server/index.ts"
   },
   "dependencies": {
     "@feathersjs/express": "^5.0.14",
@@ -27,7 +27,7 @@
     "feathers-mongoose": "^8.5.1",
     "lodash": "^4.17.21",
     "mongodb": "^6.3.0",
-    "moongose": "^1.0.0",
+    "mongoose": "^8.0.4",
     "next": "14.0.4",
     "react": "^18",
     "react-data-grid": "^7.0.0-beta.41",
@@ -36,6 +36,8 @@
     "socket.io": "^4.7.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -48,6 +50,7 @@
     "postcss-import": "^16.0.0",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5",
     "webpack": "^5.89.0"
   }
