setup configs & server

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xr-archaeology-server",
+  "name": "xr-archaeology",
   "version": "0.1.0",
   "private": true,
   "type": "commonjs",
