--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "dependencies": {
     "@feathersjs/express": "^5.0.14",
     "@feathersjs/feathers": "^5.0.14",
+    "@feathersjs/rest-client": "^5.0.14",
     "@feathersjs/socketio": "^5.0.14",
     "@feathersjs/socketio-client": "^5.0.14",
     "body-parser": "^1.20.2",
     "bson": "^6.2.0",
+    "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
     "feathers-mongoose": "^8.5.1",
@@ -33,7 +35,8 @@
     "react-data-grid": "^7.0.0-beta.41",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
-    "socket.io": "^4.7.3"
+    "socket.io": "^4.7.3",
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.202",
@@ -45,6 +48,8 @@
     "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "fs": "^0.0.1-security",
+    "os": "^0.1.2",
     "postcss": "^8",
     "postcss-cli": "^11.0.0",
     "postcss-import": "^16.0.0",
