--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "lint": "next lint",
     "watch:css": "postcss styles/tailwind.css -o styles/main.css",
-    "devMongo": "mkdir -p data && mongod --dbpath data --replSet rs0",
+    "devMongo": "mkdir -p data && npx kill-port 27017 && mongod --dbpath data --replSet rs0",
     "docker:start": "docker-compose up",
     "docker:build": "docker-compose up --build",
     "docker:force": "docker-compose up --build --force-recreate --renew-anon-volumes",
@@ -32,7 +32,6 @@
     "mongoose": "^8.0.4",
     "next": "14.0.4",
     "react": "^18",
-    "react-data-grid": "^7.0.0-beta.41",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "socket.io": "^4.7.3",
