--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "socket.io": "^4.7.3",
-    "socket.io-client": "^4.7.4"
+    "socket.io-client": "^4.7.4",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.202",
