--- a/package.json
+++ b/package.json
@@ -24,23 +24,28 @@
     "body-parser": "^1.20.2",
     "bson": "^6.2.0",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
     "feathers-mongoose": "^8.5.1",
     "lodash": "^4.17.21",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.4",
+    "multer": "^1.4.5-lts.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "sharp": "^0.33.2",
     "socket.io": "^4.7.3",
     "socket.io-client": "^4.7.4",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.202",
+    "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
