--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.18.2",
     "feathers-mongoose": "^8.5.1",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.4",
     "multer": "^1.4.5-lts.1",
