--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "experimentalDecorators": true,
     "plugins": [
       {
         "name": "next"
@@ -27,7 +28,7 @@
       "@hooks": ["./server/feathers/hooks"],
       "@configs": ["./server/feathers/configs"],
       "@api/*": ["./server/api/*"],
-      "@components/*":["./components/*"]
+      "@components/*": ["./components/*"]
     },
     "typeRoots": ["types"]
   },
@@ -38,7 +39,9 @@
       "module": "commonjs",
       "target": "es2019",
       "isolatedModules": false,
-      "esModuleInterop": true
+      "esModuleInterop": true,
+      "experimentalDecorators": true,
+      "emitDecoratorMetadata": true
     }
   }
 }
