[update] services, WIP auth

--- a/package.json
+++ b/package.json
@@ -17,17 +17,22 @@
     "server:start": "ts-node -r tsconfig-paths/register server/index.ts"
   },
   "dependencies": {
+    "@feathersjs/authentication": "^5.0.21",
+    "@feathersjs/authentication-local": "^5.0.21",
     "@feathersjs/express": "^5.0.14",
     "@feathersjs/feathers": "^5.0.14",
     "@feathersjs/rest-client": "^5.0.14",
     "@feathersjs/socketio": "^5.0.14",
     "@feathersjs/socketio-client": "^5.0.14",
+    "@feathersjs/transport-commons": "^5.0.21",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "bson": "^6.2.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
+    "feathers-hooks-common": "^8.1.2",
     "feathers-mongoose": "^8.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
