--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "express": "^4.18.2",
     "feathers-hooks-common": "^8.1.2",
     "feathers-mongoose": "^8.5.1",
+    "i18next": "^23.9.0",
+    "i18next-http-backend": "^2.5.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "mongodb": "^6.3.0",
@@ -42,6 +44,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^14.0.5",
     "react-icons": "^4.12.0",
     "sharp": "^0.33.2",
     "socket.io": "^4.7.3",
