--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "react-dom": "^18",
     "react-i18next": "^14.0.5",
     "react-icons": "^4.12.0",
-    "sharp": "^0.33.2",
+    "sharp": "^0.33.3",
     "socket.io": "^4.7.3",
     "socket.io-client": "^4.7.4",
     "uuid": "^9.0.1"
@@ -63,6 +63,7 @@
     "@types/react-dom": "^18",
     "@types/webpack-env": "^1.18.4",
     "autoprefixer": "^10.4.16",
+    "dotenv": "^16.4.5",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "fs": "^0.0.1-security",
